--- a/res/views/admin-records-view.html
+++ b/res/views/admin-records-view.html
@@ -24,6 +24,7 @@
 				<th class="thead">Student Number</th>
 				<th>Last Name</th>
 				<th>First Name</th>
+				<th>Middle Name</th>
 				<th>Course</th>
 				<th>Major/Degree</th>
 				<th>Email</th>
@@ -39,6 +40,7 @@
 				<td id="subject-code">{{student.student_no}}</td>
 				<td id="subject-code">{{student.lname}}</td>
 				<td id="subject-code">{{student.fname}}</td>
+				<td id="subject-code">{{student.mname}}</td>
 				<td id="subject-code">{{student.course}}</td>
 				<td id="subject-code">{{student.major_degree}}</td>
 				<td id="subject-code">{{student.email}}</td>
