--- a/res/views/student-fees-view.html
+++ b/res/views/student-fees-view.html
@@ -32,8 +32,8 @@
 						<td>{{fee.term}}</td>
 					</tr>
 					<tr class="table-row">
-						<th>Receipt</th>
-						<td>{{fee.receipt}}</td>
+						<th>Status</th>
+						<td>{{fee.status}}</td>
 					</tr>
 				</tbody>
 			</table>
