--- a/res/views/student_home_view.html
+++ b/res/views/student_home_view.html
@@ -35,6 +35,14 @@
 						<th>Email</th>
 						<td>{{user_object.email}}</td>
 					</tr>
+					<tr class="table-row">
+						<th>Current Term</th>
+						<td>{{user_object.term}}</td>
+					</tr>
+					<tr class="table-row">
+						<th>Status</th>
+						<td>{{user_object.status}}</td>
+					</tr>
 			</table>
 		</td>
 		</div>
