--- a/res/views/student-fees-view.html
+++ b/res/views/student-fees-view.html
@@ -32,6 +32,10 @@
 						<td>{{fee.term}}</td>
 					</tr>
 					<tr class="table-row">
+						<th>Year</th>
+						<td>{{fee.year}}</td>
+					</tr>
+					<tr class="table-row">
 						<th>Status</th>
 						<td>{{fee.status}}</td>
 					</tr>
