--- a/res/views/admin_listing.html
+++ b/res/views/admin_listing.html
@@ -15,8 +15,8 @@
 				<button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="add()">Add</button>
 			    <button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="addAll()">Add All</button>
 				
-				<button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="remove()">Remove</button>
-				<button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="removeAll()">Remove All</button>
+				<button type="submit" class="btn btn-warning btn-lg col-sm-2" ng-click="remove()">Remove</button>
+				<button type="submit" class="btn btn-warning btn-lg col-sm-2" ng-click="removeAll()">Remove All</button>
 		</form>
 	</div>
 </div>
