--- a/res/views/admin-term.html
+++ b/res/views/admin-term.html
@@ -4,11 +4,11 @@
 <span>Enter password to verify action:</span>
 <input type="text" class="form-control input-xs col-sm-8" placeholder="Password" ng-model="password"/><br/>
 <br/>
-<span>Press button to enlist all enrolled students to viable subjects</span>	
+<span>Press button to enlist all enrolled students to viable subjects</span><br/>
 <button type="submit" class="btn btn-success btn-md col-sm-2" ng-click="enroll()" style="margin-left:20px">Enroll</button>
 <br/>
 <br/>
-<span>Press button to clear student listing </span>
+<span>Press button to clear student listing </span><br/>
 <button type="submit" class="btn btn-warning btn-md col-sm-2" ng-click="clear()" style="margin-left:20px">Clear Listing</button>
 
 <br/>
