--- a/res/views/admin-term.html
+++ b/res/views/admin-term.html
@@ -9,7 +9,7 @@
 <br/>
 <br/>
 <span>Press button to clear student listing </span><br/>
-<button type="submit" class="btn btn-warning btn-xl col-xl-2" ng-click="clear()" style="margin-left:20px">Clear Listing</button>
+<button type="submit" class="btn btn-warning btn-md col-md-2" ng-click="clear()" style="margin-left:20px">Clear Listing</button>
 
 <br/>
 </div >
