--- a/res/views/admin-term.html
+++ b/res/views/admin-term.html
@@ -12,7 +12,7 @@
 <br/>
 <span>Press button to create sections and assign professors. Press only after using ENROLL button
 </span><br/>
-<button type="submit" class="btn btn-primary btn-md col-md-6" ng-click="clear()" style="margin-left:20px">GENERATE SECTIONS</button>
+<button type="submit" class="btn btn-primary btn-md col-md-6" ng-click="section()" style="margin-left:20px">GENERATE SECTIONS</button>
 
 <br/>
 </div >
