--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -4,7 +4,7 @@
 		<hr/>
 		<form method="post" class="addForm">
 		    <label>Select a section</label>
-		    <select name="table_data" class="custom-select" ng-options="subject in subjects" ng-model="selected_subject" style="max-width:200%;margin-bottom:20px">
+		    <select name="table_data" class="custom-select" ng-options="subject.subject_code for subject in subjects" ng-model="selected_subject" style="max-width:200%;margin-bottom:20px">
 	        <option value ="" disabled selected>Select a section</option>
 	        </select>
 			<br/>
