--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -11,7 +11,7 @@
 			<br/>
 			<div style="text-align:left;vertical-align:top">
 			    <label>Number of Sections to create for: &nbsp</label>
-			    <strong>{{selected_subject}}</strong>
+			    <strong>{{selected_subject.subject_code}}</strong>
 				<input type="number" class="form-control input-xs col-sm-8" placeholder="Number of Sections" ng-model="no_of_sections"/><br/>               <button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="add()">Add</button>
 			</div>
 		</form>
