--- a/res/views/faculty-sections-assign.html
+++ b/res/views/faculty-sections-assign.html
@@ -12,13 +12,14 @@
 	<th>Major</th>
 	<th>Assigned Faculty</th>
 </tr>
-<tr ng-repeat="section in sections">
+<tr ng-repeat="section in sections track by $index">
 	<td id="subject-code">{{section.subject_code}}</td>
 	<td id="subject-code">{{section.section}}</td>
 	<td id="subject-code">{{section.units}}</td>
 	<td id="subject-code">{{section.degree}}</td>
 	<td id="subject-code">{{section.major_degree}}</td>
 	<td id="subject-code">{{section.prof_id}}</td>
+	<td><button class="btn-primary btn-xs" ng-click="assign($index)">Assign</button></td>
 </tr>
 </tbody>
 </table>
