--- a/res/views/faculty-classes-view-2.html
+++ b/res/views/faculty-classes-view-2.html
@@ -16,6 +16,7 @@
                     <tr class="clickableRow" title="Collapsible Class" data-ng-click="selectTableRow($index, class.subject_code)" >
 						<td class="subject" id ="subject-code">{{class.subject_code}}</td>
 						<td class="subject" id="subject-code">{{class.subj_desc}}</td>
+						<td class="subject" id="subject-code">{{class.section}}</td>
 						<td class="subject" id="subject-grade">{{class.units}}</td>
 						<td>
 						<button class="btn-info btn-xs" data-toggle="modal" data-target="#reminderForm">Send Reminder</button>
