--- a/res/views/faculty-classes-view-2.html
+++ b/res/views/faculty-classes-view-2.html
@@ -72,7 +72,9 @@
 												<td class=	"pullright">
 												<!--<button class="btn-xs" ng-click="checkIndex(class_index,$index)">CHECK </button>-->
 												<button class="btn-xs btn-warning" data-toggle="modal" data-target="#gradeModal" ng-click="store_index(class_index,$index)">Grade</button>
-												<input type="text" class="col-sm-3 input-xs" placeholder="Enter Grade" ng-model="$parent.gradeArray[$index]"/></input><br/>
+												<select class="custom-select" ng-model="$parent.gradeArray[$index]" ng-option="possible_grades"/>
+												    <option value ="" disabled selected>Select a grade</option>
+												</select><br/>
 												
 												</td>
                                             </tr>
