--- a/res/views/faculty-classes-view-2.html
+++ b/res/views/faculty-classes-view-2.html
@@ -8,6 +8,7 @@
                     <tr class="topHeader">
                         <th>Class Code</th>
 						<th>Class Description</th>
+						<th>Section </th>
 						<th id="subject-grade">Units </th>
 						<th></th>
 					</tr>
