--- a/res/views/edit-student-view.html
+++ b/res/views/edit-student-view.html
@@ -11,6 +11,7 @@
 	<option value ="major_degree">Major/Degree</option>
 	<option value ="email">Email</option>
 	<option value ="mobile">Mobile</option>
+	<option value="status">Status</option>
 </select>
 
 <input type="text" class="form-control input-xs col-sm-8" placeholder="New value here" ng-model="entered_data"/><br/>
