--- a/res/views/admin-term.html
+++ b/res/views/admin-term.html
@@ -3,7 +3,7 @@
 
 <br/>
 <span>Press button to enlist all enrolled students to viable subjects</span><br/>
-<button type="submit" class="btn btn-success btn-md col-sm-2" ng-click="enroll()" style="margin-left:20px">ENROLL</button>
+<button type="submit" class="btn btn-success btn-md col-md-2" ng-click="enroll()" style="margin-left:20px">ENROLL</button>
 <br/>
 <br/>
 <span>Press button to clear student listing </span><br/>
@@ -12,7 +12,7 @@
 <br/>
 <span>Press button to create sections and assign professors. Press only after using ENROLL button
 </span><br/>
-<button type="submit" class="btn btn-primary btn-md col-md-6" ng-click="section()" style="margin-left:20px">GENERATE SECTIONS</button>
+<button type="submit" class="btn btn-primary btn-md col-md-6" ng-click="end()" style="margin-left:20px">END TERM</button>
 
 <br/>
 </div >
