--- a/res/views/admin-term.html
+++ b/res/views/admin-term.html
@@ -3,14 +3,14 @@
 
 <br/>
 <span>Press button to enlist all enrolled students to viable subjects</span><br/>
-<button type="submit" class="btn btn-success btn-md col-md-2" ng-click="enroll()" style="margin-left:20px">ENROLL</button>
+<button type="submit" class="btn btn-success btn-md col-md-6" ng-click="enroll()" style="margin-left:20px">ENROLL</button>
 <br/>
 <br/>
 <span>Press button to clear student listing </span><br/>
 <button type="submit" class="btn btn-warning btn-md col-md-6" ng-click="clear()" style="margin-left:20px">CLEAR LISTING</button>
 <br/>
 <br/>
-<span>Press button to create sections and assign professors. Press only after using ENROLL button
+<span>Press button to progress the term. This will progress the term and unregister all students. Use with caution.
 </span><br/>
 <button type="submit" class="btn btn-primary btn-md col-md-6" ng-click="end()" style="margin-left:20px">END TERM</button>
 
