--- a/res/views/admin-records-view.html
+++ b/res/views/admin-records-view.html
@@ -4,7 +4,7 @@
 	<select name="table_data" class="custom-select" ng-model="display_table" style="max-width:200%;margin-bottom:20px">
 	<option value ="student">Students</option>
 	<option value ="faculty">Faculty</option>
-	<option value ="subject">Subjects</option>
+	<option value ="classes">Classes</option>
 	</select>
 	<ui-view>
 		
