--- a/res/views/admin-records-view.html
+++ b/res/views/admin-records-view.html
@@ -5,6 +5,10 @@
 	<option value ="student">Students</option>
 	<option value ="faculty">Faculty</option>
 	<option value ="classes">Classes</option>
+	<option value ="listing">Listing (Archive-Only)</option>
+	<option value ="fees">Fees (Archive-Only)</option>
+		
+		
 	</select>
 	<ui-view>
 		
