--- a/res/views/faculty-sections-assign.html
+++ b/res/views/faculty-sections-assign.html
@@ -5,7 +5,7 @@
 <p> This page displays the possible sections you can handle based on your major. </p>
 </tr>
 <tbody>
-<tr id="no-hover">
+<tr id="no-hover" class="topHeader">
 	<th>Subject Code</th>
 	<th>Description</th>
 	<th>Section</th>
