--- a/res/views/admin_listing.html
+++ b/res/views/admin_listing.html
@@ -1,8 +1,9 @@
 <div class="addEntryForm">	
 	<div class="inputFields">
 		<h3>Listing</h3>
-		<br/>
-		<p style="background-color:#FFFF66"><strong>This page allows the manual adding of a student to a listing. In cases that the auto listing feature does not satisfy the situation of the student, an administrator can manually enter the student number, the term, the degree, and major of the subject. Add all will add the students to subject that match the given degree and major. Add will just add that student to the given subject code.</strong></p>
+		<span><em><strong>This page allows the manual adding of a student to a listing. 
+		
+		In cases that the auto listing feature does not satisfy the situation of the student, an administrator can manually enter the student number, the term, the degree, and major of the subject. Add all will add the students to subject that match the given degree and major. Add will just add that student to the given subject code.</strong></em></span>
 		<hr/>
 		<form method="post" class="addForm">
 			<div style="text-align:left;vertical-align:top">
