--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -12,14 +12,15 @@
 			<div style="text-align:left;vertical-align:top">
 			    <label>Number of Sections to create for: &nbsp</label>
 			    <strong>{{selected_subject.subject_code}}</strong>
-				<input type="number" class="form-control input-xs col-sm-4" placeholder="Number of Sections" ng-model="no_of_sections"/>
-				<button type="submit" class="btn btn-warning btn-log col-sm-2" ng-click="generate()">Generate</button>
+				<input type="number" class="form-control input-xs col-sm-4" placeholder="Number of Sections" ng-model="no_of_sections" style="margin-bottom:5px"/>
+				<button type="submit" class="btn btn-warning btn-md col-md-4" ng-click="generate()">Generate</button>
 				<br/>               
 				<br/>
-				<button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="add()">Add</button>
+				
 			</div>
 		</form>
 	</div>
+	<br/>
 	
 	
 	<table class="table table-hover table-condensed">
@@ -60,6 +61,8 @@
         </tr>
         </tbody>
     </table>
+    
+    <button type="submit" class="btn btn-success btn-md col-md-4" ng-click="add()">Add</button>
 	
 	
 </div>
