--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -49,14 +49,12 @@
 	        <td id="subject-code">{{class.prof_id}}</td>
 	        
 	        <td>
-	            <button class="btn-primary btn-xs" ng-click="assign($index)">Assign</button>
-	            <select class="custom-select" ng-model="$parent.prof_array[$index]" ng-option="prof.prof_id for prof in prof_list" style="max-width:200%;margin-bottom:20px">
-		              
-		            
+	            <button class="btn-primary btn-xs" ng-click="assign($index)">Assign</button>	        
+	        </td>
+	        <td>
+	            <select class="custom-select" ng-model="$parent.prof_array[$index]" ng-options="prof.prof_id for prof in prof_list" style="max-width:200%;margin-bottom:20px">
+	   
 		        </select>
-	        
-	        
-	        
 	        </td>
         </tr>
         </tbody>
