--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -5,7 +5,7 @@
 		<form method="post" class="addForm">
 		    <label><strong>Select a section</strong></label><br/>
 		    <select name="table_data" class="custom-select" ng-options="subject.subject_code for subject in subjects" ng-model="selected_subject" style="max-width:200%;margin-bottom:20px">
-	       
+	        <option value ="" disabled selected>Select a section</option>
 	        </select>
 			<br/>
 			<br/>
@@ -44,7 +44,7 @@
 	        <td id="subject-code">{{class.major_degree}}</td>
 	        <td id="subject-code">{{class.prof_id}}</td>
 	        <td>
-	            <select class="custom-select" ng-model="$parent.prof_array[$index]" ng-options="prof.prof_id for prof in prof_list" style="max-width:200%">
+	            <select class="custom-select" ng-model="prof_array[$index]" ng-options="prof.prof_id for prof in prof_list" style="max-width:200%">
 	   
 		        </select>
 	        </td>
