--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -26,7 +26,7 @@
 	<table class="table table-hover table-condensed">
          <h4>List of Sections</h4>
         <tbody>
-        <tr class="topHeader">
+        <tr  id="no-hover" class="topHeader">
 	        <th>Subject Code</th>
 	        <th>Description</th>
 	        <th>Section</th>
