--- a/res/views/edit-subject-view.html
+++ b/res/views/edit-subject-view.html
@@ -3,11 +3,12 @@
 
 <label>Please select a field to edit: </label>
 <select class="custom-select" style="max-width:200%;margin-bottom:20px" ng-model="fieldEdit">
-	<option value ="student">Subject Code</option>
-	<option value ="lname">Subject Description</option>
-	<option value ="fname">Units</option>
-	<option value ="mname">Professor ID</option>
+	<option value ="subject_code">Subject Code</option>
+	<option value ="subj_desc">Subject Description</option>
+	<option value ="units">Units</option>
+	<option value ="prof_id">Professor ID</option>
 	<option value ="major_degree">Major/Degree</option>
+	<option value ="degree">Degree</option>
 </select>
 
 <input type="text" class="form-control input-xs col-sm-8" placeholder="New value here" ng-model="entered_data"/><br/>
