--- a/res/views/add-subject-modal-view.html
+++ b/res/views/add-subject-modal-view.html
@@ -6,9 +6,12 @@
 			<div class="modal-body" id="modal-body" style="text-align:left;vertical-align:top">
 				<input type="text" class="form-control input-xs col-sm-8" placeholder="Subject Code" ng-model="subject_code"/><br/>
 				<input type="text" class="form-control input-xs col-sm-8" placeholder="Subject Description" ng-model="subj_desc"/><br/>
-				<input type="text" class="form-control input-xs col-sm-8" placeholder="Units" ng-model="units"/><br/>
+				<input type="number" class="form-control input-xs col-sm-8" placeholder="Units" ng-model="units"/><br/>
+				<input type="number" class="form-control input-xs col-sm-8" placeholder="Term" ng-model="term"/><br/>
 				<input type="text" class="form-control input-xs col-sm-8" placeholder="Professor ID" ng-model="prof_id"/><br/>
+				<input type="text" class="form-control input-xs col-sm-8" placeholder="Degree" ng-model="degree"/><br/>
 				<input type="text" class="form-control input-xs col-sm-8" placeholder="Major/Degree" ng-model="major_degree"/><br/>
+				
 			</div>																
 				<button type="submit" class="btn btn-success btn-lg col-sm-2" ng-click="add()">Submit</button>
 		</form>
