Added many stuff

--- a/res/views/student-fees-view.html
+++ b/res/views/student-fees-view.html
@@ -17,7 +17,7 @@
 				<thead>
 					<tr class="secondHeader">
 					<th>Fee</th>
-					<th>Amount</th>
+					<th>Unpaid Amount</th>
 					</tr>
 				</thead>
 				<tbody ng-repeat="fee in user_object.fees track by $index">
