Added many stuff

--- a/res/views/admin-create-section.html
+++ b/res/views/admin-create-section.html
@@ -26,7 +26,7 @@
 	<table class="table table-hover table-condensed">
          <h4>List of Sections</h4>
         <tbody>
-        <tr style="background-color:#123456">
+        <tr style="background-color:#123456;color:white">
 	        <th>Subject Code</th>
 	        <th>Description</th>
 	        <th>Section</th>
@@ -51,9 +51,6 @@
 		        </select>
 	        </td>
 	        
-	         <td>
-	            <button class="btn-primary btn-xs" ng-click="assign($index)">Assign</button>	        
-	        </td>
         </tr>
         </tbody>
     </table>
