--- a/res/views/admin-records-view.html
+++ b/res/views/admin-records-view.html
@@ -134,6 +134,10 @@
 					                <tr>
 					                <td></td>
 					                <td></td>
+					                </tr>
+					                <tr>
+					                    <th>Status</th>
+					                    <td>{{fee.status}}</td>
 					                </tr>	
 					                
 					                
